added delete button
starting to work on editor page structure starting with the head bar that will contain the name and options.

--- a/jsxconfig.json
+++ b/jsxconfig.json
@@ -1,4 +1,4 @@
 {
-    "start_file": "./app/select/js/main.jsx",
-    "outdir": "./app/select/js/build/"
+    "start_file": "./app/build.jsx",
+    "outdir": "./app/build"
 }
